<resources>
    <string name="app_name">SecureVault</string>
    <string name="securevault">SecureVault</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="do_not_have_account">Do not have account ?</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_mobile">Enter mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="password_not_match">Password mis-matched</string>
    <string name="login_successful">Login Successful</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="settings">Settings</string>
    <string name="my_vault">My Vault</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile">Mobile</string>
    <string name="touch_id">Touch ID</string>
    <string name="logout">LOG OUT</string>
    <string name="types">Types</string>
    <string name="login">Login</string>
    <string name="card">Card</string>
    <string name="identity">Identity</string>
    <string name="secure_note">Secure Note</string>
    <string name="bin">Bin</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="we_need_to_make_sure_it_is_you">We need to make sure it is you</string>
    <string name="place_your_finger_on_the_fingerprint_scanner_and_let_application_perform_biometric_authentication">Place your finger on the fingerprint scanner and let application perform biometric authentication</string>
    <string name="ok">OK</string>
    <string name="please_login_with_username_and_password_to_enable_biometric_login_from_settings">"Please login with Email and Password to enable biometric login from settings "</string>
    <string name="logins">Logins</string>
    <string name="add_record">Add Record</string>
    <string name="username">Username</string>
    <string name="add">Add</string>
    <string name="url">Url</string>
    <string name="username_required">username required</string>
    <string name="password_required">password required</string>
    <string name="url_required">url required</string>
    <string name="record_added_successfully">Record Added Successfully</string>
    <string name="record_not_added">Record not added</string>
    <string name="edit_record">Edit Record</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="record_updated">Record updated</string>
    <string name="record_not_updated">Record not updated</string>
    <string name="record_deleted">Record deleted</string>
    <string name="record_not_deleted">Record not deleted</string>
    <string name="follow_us_on">follow us on</string>
    <string name="restore">Restore</string>
    <string name="restore_record">Restore Record</string>
    <string name="record_added_to_bin_successfully">Record added to bin successfully</string>
    <string name="record_not_added_to_bin">Record not added to bin</string>
    <string name="record_restore_successfully">Record restore successfully</string>
    <string name="record_not_restored">Record not restored</string>
</resources>