<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_start_end"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dialog_background_color"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/are_you_sure_you_want_to_logout"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_marginTop="@dimen/margin_top"
            android:backgroundTint="@color/white"
            android:text="@string/logout"
            android:id="@+id/btnDLogout"
            android:textColor="@color/black"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#757575"
            android:text="@string/cancel"
            android:id="@+id/btnDCancel"
            android:textColor="@color/black"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>