<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyVaultFrag">

    <include layout="@layout/homepage_navbar"
        />

    <TextView
        android:id="@+id/tvTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_start_end"
        app:layout_constraintTop_toBottomOf="@+id/llNavBar"
        android:text="@string/types"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#008DDA"
        />

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTypes"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_login"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginStart="50dp"
        android:padding="6dp"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvTypes"
        app:layout_constraintStart_toStartOf="@id/ivLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/ivCard"
        android:layout_width="32dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogin"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_card"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginStart="50dp"
        android:padding="6dp"
        android:text="@string/card"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/ivLogin"
        app:layout_constraintStart_toStartOf="@id/ivCard"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/ivIdentity"
        android:layout_width="32dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/ivCard"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_identity"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvIdentity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginStart="50dp"
        android:padding="6dp"
        android:text="@string/identity"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/ivCard"
        app:layout_constraintStart_toStartOf="@id/ivIdentity"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/ivNotes"
        android:layout_width="32dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/ivIdentity"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_note"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginStart="50dp"
        android:padding="6dp"
        android:text="@string/secure_note"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/ivIdentity"
        app:layout_constraintStart_toStartOf="@id/ivNotes"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotes"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:background="@color/white"
        android:id="@+id/view"
        />

    <TextView
        android:id="@+id/tvRecycleBin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_start_end"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:text="@string/recycle_bin"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#008DDA"
        />

    <ImageView
        android:id="@+id/ivBin"
        android:layout_width="32dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/tvRecycleBin"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_bin"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvBin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/icons_margin_top"
        android:layout_marginStart="50dp"
        android:padding="6dp"
        android:text="@string/bin"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvRecycleBin"
        app:layout_constraintStart_toStartOf="@id/ivBin"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>