<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/settings_navbar" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llNavBar"
        android:text="@string/name"
        android:textSize="16.0sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:layout_marginTop="10.0dip"
        android:text="@string/email"
        android:textSize="14.0sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        android:layout_marginTop="10.0dip"
        android:text="@string/mobile"
        android:textSize="14.0sp"
        android:textColor="@color/white"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMobile"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:background="@color/black"
        android:id="@+id/view"
        android:backgroundTint="@color/white"
        />

    <ImageView
        android:id="@+id/ivTouchId"
        android:layout_width="25dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_fingerprint"
        android:layout_marginStart="6dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvTouchId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="42dp"
        android:padding="5dp"
        android:text="@string/touch_id"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/ivTouchId"
        android:textColor="@color/white"
        />

    <Switch
        android:id="@+id/touchId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_top"
        android:theme="@style/MySwitch"
        />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/logout_button_color"
        android:text="@string/logout"
        app:icon="@drawable/ic_logout"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvTouchId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/follow_us_on"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tvFollowUsOn"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/ivFacebook"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_facebook"
        app:layout_constraintTop_toBottomOf="@id/tvFollowUsOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivTwitter"
        android:layout_marginTop="@dimen/followUs_icons_margin_top"
        android:contentDescription="@string/logo"
        />

    <ImageView
        android:id="@+id/ivTwitter"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_twiter"
        app:layout_constraintTop_toBottomOf="@id/tvFollowUsOn"
        app:layout_constraintStart_toEndOf="@id/ivFacebook"
        app:layout_constraintEnd_toStartOf="@id/ivYoutube"
        android:layout_marginTop="@dimen/followUs_icons_margin_top"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/logo"
        />

    <ImageView
        android:id="@+id/ivYoutube"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_youtube"
        app:layout_constraintTop_toBottomOf="@id/tvFollowUsOn"
        app:layout_constraintStart_toEndOf="@id/ivTwitter"
        app:layout_constraintEnd_toStartOf="@id/ivInstagram"
        android:layout_marginTop="@dimen/followUs_icons_margin_top"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/logo"
        />

    <ImageView
        android:id="@+id/ivInstagram"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_instagram"
        app:layout_constraintTop_toBottomOf="@id/tvFollowUsOn"
        app:layout_constraintStart_toEndOf="@id/ivYoutube"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/followUs_icons_margin_top"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/logo"
        />

</androidx.constraintlayout.widget.ConstraintLayout>