<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        android:backgroundTint="@color/dialog_background_color"
        android:id="@+id/Note"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/ivUsername"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_username"
                android:layout_marginStart="6dp"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_start_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="50dp"
                android:padding="13dp"
                android:text="@string/username"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/ivUsername"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/white"
                />

            <ImageView
                android:id="@+id/ivPassword"
                android:layout_width="45dp"
                android:layout_height="43dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_password"
                android:layout_marginStart="6dp"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_start_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivUsername"
                />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="50dp"
                android:padding="13dp"
                android:text="@string/password"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/ivPassword"
                app:layout_constraintTop_toBottomOf="@id/tvUsername"
                android:textColor="@color/white"
                />

            <ImageView
                android:id="@+id/ivUrl"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_url"
                android:layout_marginStart="6dp"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_start_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPassword"
                />

            <TextView
                android:id="@+id/tvUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="50dp"
                android:padding="10dp"
                android:text="@string/url"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/ivUrl"
                app:layout_constraintTop_toBottomOf="@id/tvPassword"
                android:textColor="@color/white"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>